add class name to category buttons, add css to category container and buttons

--- a/style.css
+++ b/style.css
@@ -18,3 +18,18 @@ body {
     margin: 50px 0;
     padding: 30px 0;
 }
+
+.cat-container {
+    text-align: center;
+    margin-top: 25px;
+}
+
+.cat-button {
+    padding: 10px;
+    margin: 0 5px;
+}
+
+.cat-button:hover {
+    background-color: #fafafa;
+    border: solid 2px lightblue;
+}
