--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@ body {
     max-width: 85%;
     margin: 0 auto;
     background-color: lightblue;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 }
 
 .title {
     font-variant: small-caps;
     text-align: center;
+    font-size: 2.5em;
 }
 
 .instructions {
@@ -51,5 +53,10 @@ body {
 li.letter {
     display: inline;
     margin: 0 5px;
+    font-size: 1.6em;
+}
+
+#category-chosen {
+    text-align: center;
     font-size: 1.6em;
 }
