--- a/style.css
+++ b/style.css
@@ -76,9 +76,7 @@ li.letter {
 }
 
 .category-form {
-    width: 33%;
-    margin: 0 auto;
-    padding: 20px;
+    padding: 0 20px 20px 20px;
     text-align: left;
 }
 
@@ -105,3 +103,43 @@ li.letter {
     display: block;
     margin: 20px auto;
 }
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    overflow: auto;
+    background-color: rgb(0, 0 , 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
+    padding-top: 100px;
+}
+.modal-content {
+    background-color: #f0ebeb;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%;
+    box-shadow: 10px 5px 5px #888;
+    overflow: auto;
+}
+
+h3 {
+    text-align: center;
+    display: inline-block;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 2em;
+    font-weight: bold;
+}
+.close:hover {
+    color: rgb(87, 87, 87);
+    text-decoration: none;
+    cursor: pointer;
+}
+    
